--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,8 +35,13 @@ android {
 dependencies {
     implementation 'com.github.piasy:BigImageViewer:1.8.1'
     implementation 'com.github.piasy:ProgressPieIndicator:1.8.1'
-    implementation 'com.github.piasy:GlideImageLoader:1.8.1'
+//    implementation 'com.github.piasy:GlideImageLoader:1.8.1'
 
+    implementation ("com.github.bumptech.glide:glide:4.11.0") {
+        exclude group: "com.android.support"
+    }
+    implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'com.github.stfalcon-studio:StfalconImageViewer:v1.0.1'
 
 
     implementation 'com.google.code.gson:gson:2.8.6'
