--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,28 +13,27 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Ortho">
         <activity
+            android:name=".activities.LoginTabActivity"
+            android:windowSoftInputMode="stateHidden|adjustResize"
+
+            android:exported="true" >
+        <intent-filter>
+            <action android:name="android.intent.action.MAIN" />
+
+            <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter>
+        </activity>
+        <activity
             android:name=".ImageViwer"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
+            android:name=".activities.MainActivity"
             android:exported="false"
             android:launchMode="singleTop" />
-        <activity
-            android:name=".LoginActivity"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-        <activity android:name=".NewActivity" />
-        <activity android:name=".AddPatientActivity" />
-        <activity android:name=".HomeActivity" />
-        <activity android:name=".PgActivity" />
+        <activity android:name=".activities.AddPatientActivity" />
+        <activity android:name=".activities.HomeActivity" />
         <activity android:name=".PgaddActivity" />
-        <activity android:name=".NotesActivity" />
-        <activity android:name=".NotesaddActivity" />
+        <activity android:name=".activities.NoteEditor" />
         <activity android:name=".ViewPatientActivity" />
     </application>
 
