--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,7 +49,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-storage'
     implementation "androidx.recyclerview:recyclerview:1.2.1"
 
-    implementation 'com.github.dhaval2404:imagepicker:2.1'
+//    implementation 'com.github.dhaval2404:imagepicker:2.1'
     implementation 'com.google.firebase:firebase-analytics'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.2.0'
@@ -60,6 +60,9 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.google.firebase:firebase-inappmessaging:20.1.1'
     implementation 'com.google.firebase:firebase-auth:21.0.1'
+
+    implementation 'com.github.yalantis:ucrop:2.2.6-native'
+    implementation files('../libs/imagepicker.aar')
     testImplementation 'junit:junit:4.12'
 
 }
